# uutils

./: .gitignore  .gitlab-ci.yml  Cargo.toml
src/arch/: Cargo.toml
src/chmod/: chmod.rs
src/cp/: cp.rs
src/install/: mode.rs
src/ln/: ln.rs
src/ls/: Cargo.toml  ls.rs
src/mkdir/: mkdir.rs
src/mktemp/: tempdir.rs
src/more/: Cargo.toml  more.rs
src/tail/: Cargo.toml
src/test/: Cargo.toml  test.rs
src/uname/: Cargo.toml
src/uucore/: Cargo.toml  fs.rs  lib.rs  mode.rs
