[package]
name = "arch"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_arch"
path = "arch.rs"

[dependencies]
platform-info = { git = "https://gitlab.redox-os.org/redox-os/platform-info.git", branch = "redox-unix" }
uucore = { path = "../uucore" }

[[bin]]
name = "arch"
path = "../../uumain.rs"
