[package]
name = "uname"
version = "0.0.1"
authors = []
build = "../../mkmain.rs"

[lib]
name = "uu_uname"
path = "uname.rs"

[dependencies]
clap = "2.32.0"
platform-info = { git = "https://gitlab.redox-os.org/redox-os/platform-info.git", branch = "redox-unix" }
uucore = { path = "../uucore" }

[[bin]]
name = "uname"
path = "../../uumain.rs"
